syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "GrpcAddress";

package br.com.gn;

message Address {
  string street = 1;
  string city = 2;
  string zipCode = 3;
  string country = 4;
}

enum OrderDirection {
  UNKNOWN_ORDER_DIRECTION = 0;
  ASC = 1;
  DESC = 2;
}
message Pageable {
  int32 size = 1;
  int32 page = 2;
  string orderBy = 3;
  OrderDirection direction = 4;
}

enum OperationType {
  UNKNOWN_OPERATION = 0;
  IMPORT = 1;
  EXPORT = 2;
}
